--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,9 @@ name: CI
 on:
   pull_request:
   push:
-    branches: [ main ]
+    branches: 
+         - main 
+         - application-url-logo 
 
 jobs:
   scan_ruby:
