--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: 
       - main
-      - feature/available-seats
+      - update-flight-arrival-time
 
 jobs:
   scan_ruby:
