Modify workflow trigger

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: 
       - main
-      - feature/total-fare
+      - feature/pricing-strategy-seats
 
 jobs:
   scan_ruby:
