--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,7 @@ jobs:
         ports: ['5432:5432']
         env:
           POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
         options: >-
           --health-cmd="pg_isready"
           --health-interval=10s
@@ -73,6 +74,7 @@ jobs:
     env:
       RAILS_ENV: test
       PG_USERNAME: postgres
+      PG_PASSWORD: password
       PG_HOST: localhost
       PG_PORT: 5432
 
